--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <h1> Irrelevant HoneyBadgers </h1>
   <h1> Honey Badger Don't Give a Shit </h1>
   <img src="http://www.quickmeme.com/img/35/350a452a2f772202cdbd74e865e40fd853fdbfdc5533ff69f8bb26fa8702101e.jpg">
-  <iframe width="425" height="349" src="http://www.youtube.com/embed/4r7wHMg5Yjg" frameborder="0" allowfullscreen=""></iframe>
+  <iframe width="425" height="349" src="https://www.youtube.com/embed/4r7wHMg5Yjg" frameborder="0" allowfullscreen=""></iframe>
 
 <%= yield %>
 
