Tuesday night push

--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Doctors#index</h1>
 <p>Find me in app/views/doctors/index.html.erb</p>
+
+<div class="iframe">
+ <iframe src="https://www.google.com/calendar/embed?src=noel.sagaille@gmail.com&ctz=America/New_York" align="middle" frameborder="0" scrolling="no" width="800" height="800" seamless></iframe>
+</div>
+
+
