--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -12,7 +12,7 @@
 <script type='text/javascript'>
 $(document).ready(function() {
     $('#calendar').fullCalendar({
-        googleCalendarApiKey: 'AIzaSyCYEvZl6I5vJ6tSVutlF2EF9qsPcOexswA',
+        googleCalendarApiKey: ENV["GOOGLE_CALENDAR_CLIENT_ID"],
         events: {
             googleCalendarId: 'n825ka53ioka43rmf80b9pagn4@group.calendar.google.com'
         },
