--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -3,31 +3,48 @@
 
 
 <style type="text/css">
-      #calendar { height: 600px; width: 800px;}
+  #calendar { height: 600px; width: 800px;}
 </style>
 <script type='text/javascript'>
-debugger;
-$(document).ready(function() {
+  $(document).ready(function() {
     $('#calendar').fullCalendar({
-        googleCalendarApiKey: 'GOOGLE_CALENDAR_CLIENT_ID',
-        events: {
-            googleCalendarId: 'n825ka53ioka43rmf80b9pagn4@group.calendar.google.com'
+      googleCalendarApiKey: 'GOOGLE_CALENDAR_CLIENT_ID',
+      events: {
+        googleCalendarId: 'n825ka53ioka43rmf80b9pagn4@group.calendar.google.com'
+      },
+      header: {left: 'today prev,next', center: 'title', right: 'month, agendaWeek, agendaDay' }, // buttons for switching between views
+      defaultView: 'agendaDay',
+      views: {
+          month: { // name of view
+              // titleFormat: 'YYYY, MM, DD'
+              // other view-specific options here
+          },
+        basic: {
+          // timeFormat: 'h(:mm)t'
+          // options apply to basicWeek and basicDay views
         },
-        header: { center: 'month, basicWeek, basicDay' }, // buttons for switching between views
-
-        views: {
-            month: { // name of view
-                // titleFormat: 'YYYY, MM, DD'
-                // other view-specific options here
-            },
-            week: {
-
-            },
-            day: {
-
-            }
+        agenda: {
+          minTime: "08:00:00",
+          maxTime: "18:00:00"
+          // timeFormat: 'h:mm'
+        // options apply to agendaWeek and agendaDay views
+        },
+        week: {
+          // timeFormat: 'h(:mm)t'
+        },
+        day: {
+          // timeFormat: 'h(:mm)t'
         }
-    });
+      },
+      businessHours: {
+            start: '09:00', // a start time (9am in this example)
+            end: '17:00', // an end time (5pm in this example)
+
+            dow: [ 1, 2, 3, 4, 5]
+            // days of week. an array of zero-based day of week integers (0=Sunday)
+            // (Monday-Thursday in this example)
+          }
+        });
 });
 </script>
 <script type='text/javascript' src='fullcalendar/gcal.js'></script>
