--- a/app/assets/javascripts/doctors.js.erb
+++ b/app/assets/javascripts/doctors.js.erb
@@ -22,29 +22,34 @@ $(".doctors.index").ready(function(){
       },
     },
     dayClick: function(date, jsEvent, view) {
-
+debugger
       var myCalendar = $('#calendar'); 
-      // myCalendar.fullCalendar();
+      myCalendar.fullCalendar();
       var myEvent = {
         title:"my new event",
         allDay: false,
         start: new Date(),
         end: new Date()
       };
-      myCalendar.fullCalendar( 'renderEvent', myEvent );
-      debugger;
+      myCalendar.fullCalendar('renderEvent', myEvent );
 
-      alert('Clicked on: ' + date.format());
-      alert('Coordinates: ' + jsEvent.pageX + ',' + jsEvent.pageY);
-      alert('Current view: ' + view.name);
+      // myCalendar.fullCalendar( 'renderEvent', myEvent );
+
+      // alert('Clicked on: ' + date.format());
+      // alert('Coordinates: ' + jsEvent.pageX + ',' + jsEvent.pageY);
+      // alert('Current view: ' + view.name);
+debugger
       // change the day's background color just for fun
       $(this).css('background-color', 'red');
+
       function refreshCalendar(){
         $("#calendar").fullCalendar( 'refetchEvents' );
-      }
+      };
+
       function errorHandler(error){
         console.log("error: ", error);
-      }
+      };
+
       function addEvent(event, refreshCalendar) {
         $.ajax({
           type: "POST",
@@ -54,15 +59,18 @@ $(".doctors.index").ready(function(){
           success: refreshCalendar,
           error: errorHandler,
         });
-      }
+      };
     },
+
     eventClick: function(event) {
       if (event.url) {
         window.open(event.url);
         return false;
       }
     },
+
     eventMouseover: function( event, jsEvent, view ) {},
+
     events: {
       googleCalendarId: 'n825ka53ioka43rmf80b9pagn4@group.calendar.google.com',
       color: 'yellow',
